syntax = "proto3";
package account;

option go_package = "github.com/GGP1/adak/pkg/user/account";

service Accounts {
    rpc ChangeEmail (ChangeEmailRequest) returns (ChangeEmailResponse);
    rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
    rpc ValidateEmail (ValidateEmailRequest) returns (ValidateEmailResponse);
}

message Void {}

message ChangeEmailRequest {
    string ID = 1;
    string newEmail = 2;
    string token = 3;
}

message ChangeEmailResponse {
    Void nil = 1;
}

message ChangePasswordRequest {
    string ID = 1;
    string oldPass = 2;
    string newPass = 3;
}

message ChangePasswordResponse {
    Void nil = 1;
}

message ValidateEmailRequest {
    string email = 1;
    string confirmationCode = 2;
    bool verifiedEmail = 3;
}

message ValidateEmailResponse {
    Void nil = 1;
}